# pahsah

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: lib.rs  stl.rs  stp.rs
src/stl/: ascii.rs  binary.rs  parallel.rs  triangle.rs
src/stl/ascii/: lexer.rs  parser.rs
src/stp/: lexer.rs  parser.rs
tests/: bottle.stl  cube.ipt  small_cube.stl
tests/step-ap242/: nist_ctc_02_asme1_ap242-e2.stp  nist_ctc_03_asme1_ap242-e2.stp  nist_ftc_06_asme1_ap242-e2.stp  nist_ftc_07_asme1_ap242-e2.stp  nist_ftc_10_asme1_ap242-e2.stp  nist_ftc_11_asme1_ap242-e2.stp  nist_stc_06_asme1_ap242-e3.stp  nist_stc_07_asme1_ap242-e3.stp  nist_stc_08_asme1_ap242-e3.stp
