[package]
name = "pahsah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[features]
parallel = ["dep:rayon"]

[dependencies]
byteorder = "1.4.3"
cfg-if = "1.0.0"
glam = "0.25.0"
logos = "0.14.0"
rayon = { version = "1.10.0", optional = true }
thiserror = "1.0.48"
